tolk-tester/tests/invalid-symbol/err-2616.tolk
fun main() {
    do {
        var x = 1;
    } while (x);
}

/**
@compilation_should_fail
@stderr undefined symbol `x`
 */
